Support RGID on Linux
Signed-off-by: Khang Tran <khang.tran.ct@renesas.com>

--- a/v4h/Makefile
+++ b/v4h/Makefile
@@ -1,13 +1,19 @@
 obj-m :=cpurttmod3_v4h.o
 cpurttmod3_v4h-objs := smoni_api.o cpurttdrv.o
 
+$(info RGID_ON = $(RGID_ON))
+
 SRC := $(shell pwd)
 
+ifeq ("$(RGID_ON)","1")
+    EXTRA_CFLAGS += -DCONFIG_ENABLE_RGID
+endif
+
 all:
-	$(MAKE) -C $(KERNEL_SRC) M=$(SRC)
+	$(MAKE) -C $(KERNEL_SRC) M=$(SRC) EXTRA_CFLAGS="$(EXTRA_CFLAGS)"
 
 modules_install:
-	$(MAKE) -C $(KERNEL_SRC) M=$(SRC) modules_install
+	$(MAKE) -C $(KERNEL_SRC) M=$(SRC) EXTRA_CFLAGS="$(EXTRA_CFLAGS)" modules_install
 
 clean:
 	rm -f *.o *.a *~ core .depend .*.cmd *.ko *.mod*
